--- a/templates/index.html
+++ b/templates/index.html
@@ -72,6 +72,19 @@
                                 </div>
                             </div>
                             <div class="mb-3">
+                                <label class="form-label">Layout do texto</label>
+                                <div class="d-flex gap-3 flex-wrap">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="text-layout" id="layout-single" value="single" checked>
+                                        <label class="form-check-label" for="layout-single">Uma coluna</label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="text-layout" id="layout-double" value="double">
+                                        <label class="form-check-label" for="layout-double">Duas colunas</label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="mb-3">
                                 <label for="font-size" class="form-label">Tamanho da fonte: <span id="font-size-value">12</span>pt</label>
                                 <input type="range" class="form-range" min="8" max="18" step="1" value="12" id="font-size">
                             </div>
